reconfiguration for documentation website

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,7 +6,6 @@ Welcome to **Cloudinator**! Your deployment won't be easier than this.
 
 #### Quick Start
 
-import Counters from '../components/counters'
+import Introduction from '../components/Introduction'
 
-
-<Counters />
+<Introduction />
