Add new header sectionoduction page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,14 @@
-## Cloudinator
-Welcome to **Cloudinator**! Your deployment won't be easier than this.
+import Introduction from '../components/Introduction'
+import DocHero from '../components/introduction/DocHero'
+
+## <span className="text-purple-500">Cloudinator</span>
+<span className="text-gray-700 dark:text-gray-300">Say Goodbye to <strong>Manual</strong>, Say hello to <strong>Automation</strong>!</span>
+
+<DocHero />
 
 #### What is Cloudinator?
 **Cloudinator** is a platform that assists with deployment using devops methodology that lets you deploy both monolithic and microservices services for your website.
 
 #### Quick Start
-
-import Introduction from '../components/Introduction'
 
 <Introduction />
