--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,10 +1,28 @@
 import GettingStarted from '../components/GettingStarted'
 
-## Step 1 : Choose Deployment Methods
+# <span className="text-purple-700 font-bold">Getting Started with Cloudinator</span>
 
-#### Cloudinator Git
+Welcome to the Cloudinator getting started guide. This document will help you set up Cloudinator and guide you through basic usage.
 
-<GettingStarted />
+## <span className="text-purple-500 font-bold">Prerequisites</span>
+
+Before you begin, ensure you have the following:
+- Operating System: Windows, macOS, or Linux
+- Concept DevOps
+- Basic understanding of Programming
+
+## <span className="text-purple-500 font-bold">Installation</span>
+
+Follow these steps to using cloudinator CLI:
+
+```bash
+# Using npm
+npm install -g cloudinator
+
+# Using yarn
+yarn global add cloudinator
+```
+
 
 
 
