--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,14 +1,34 @@
 import Introduction from '../components/Introduction'
 import DocHero from '../components/introduction/DocHero'
 
-## <span className="text-purple-500">Cloudinator</span>
+# <span className="text-purple-700 font-bold">Cloudinator</span>
 <span className="text-gray-700 dark:text-gray-300">Say Goodbye to <strong>Manual</strong>, Say hello to <strong>Automation</strong>!</span>
 
 <DocHero />
 
-#### What is Cloudinator?
-**Cloudinator** is a platform that assists with deployment using devops methodology that lets you deploy both monolithic and microservices services for your website.
+## <span className="text-purple-500 font-bold">Overview</span>
+**Cloudinator** is a comprehensive deployment and management platform designed to streamline the process of application deployment for businesses and developers. It supports both monolithic and microservices architectures and offering customizable domain management.
 
-#### Quick Start
+## <span className="text-purple-500 font-bold">Objective</span>
+This Guide will show you how to use this **Cloudinator** platform for deploy service both monolothic and spring microservice
 
-<Introduction />
+- Getting familar with cloudinator
+- Learn tutorial step by step of deployment
+- How to create deployment service
+
+## <span className="text-purple-500 font-bold">Tutorial Video</span>
+Here is a quick introduction video about cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+{/* <Introduction /> */}
