add about, contact, installation and config some additional components

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -24,9 +24,9 @@ Here is a quick introduction video about cloudinator:
     width="580"
     height="320"
     src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
-    frameborder="0"
+    frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
+    allowFullScreen
     style={{ border: '1px solid #ccc', borderRadius: '8px' }}
   ></iframe>
 </div>
