--- a/pages/Deployment/Database/postgres.mdx
+++ b/pages/Deployment/Database/postgres.mdx
@@ -1,1 +1,5 @@
-## postgres
+## <span className="text-purple-700 font-bold">PostgreSQL Deployment</span>
+
+<div className="w-full h-[600px] grid place-content-center">
+    <h1 className="text-purple-500 text-2xl">Coming Soon</h1>
+</div>
