--- a/pages/Deployment/Frontend/vite.mdx
+++ b/pages/Deployment/Frontend/vite.mdx
@@ -1,4 +1,4 @@
-## <span className="text-purple-700 font-bold">MongoDB Deployment</span>
+## <span className="text-purple-700 font-bold">Vite Deployment</span>
 
 <div className="w-full h-[600px] grid place-content-center">
     <h1 className="text-purple-500 text-2xl">Coming Soon</h1>
