pull from sokny and fix hydration error

--- a/pages/Deployment/Frontend/nextjs.mdx
+++ b/pages/Deployment/Frontend/nextjs.mdx
@@ -1,5 +1,7 @@
+import NextjsDeployGuide from '@/components/deployments/frontend/NextjsDeployGuide';
+
 ## <span className="text-purple-700 font-bold">Next.js Deployment</span>
 
-<div className="w-full h-[600px] grid place-content-center">
-    <h1 className="text-purple-500 text-2xl">Coming Soon</h1>
-</div>
+Here is a step-by-step guide on how to deploy your HTML static site on Cloudinator: 
+
+<NextjsDeployGuide />
