add new content in nuxtjs, nextjs and change some ui

--- a/pages/deployment/frontend/nextjs.mdx
+++ b/pages/deployment/frontend/nextjs.mdx
@@ -1,7 +1,35 @@
 import NextjsDeployGuide from '@/components/deployments/frontend/NextjsDeployGuide';
+import NextjsGitHubLink from '@/components/deployments/frontend/nextjs/NextjsGitHubLink'
 
 ## <span className="text-purple-700 font-bold">Next.js Deployment</span>
 
 Here is a step-by-step guide on how to deploy your HTML static site on Cloudinator: 
 
 <NextjsDeployGuide />
+
+## <span className="text-purple-700 font-bold">Video Guide</span>
+
+Here is a quick introduction video about Nextjs deployment in cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+## <span className="text-purple-700 font-bold">Resource</span>
+
+Here is overview of project structure:
+
+<div className="p-4">
+  <NextjsGitHubLink 
+    repoUrl="https://github.com/VathanakSol/basic-nextjs.git" 
+    repoName="basic-nextjs"
+  />
+</div>
