--- a/pages/deployment/frontend/nuxt.mdx
+++ b/pages/deployment/frontend/nuxt.mdx
@@ -1,7 +1,35 @@
 import NuxtJSDeployGuide from '@/components/deployments/frontend/NuxtJSDeployGuide';
+import NuxtjsGitHubLink from '@/components/deployments/frontend/nuxtjs/NuxtjsGitHubLink'
 
-## <span className="text-purple-700 font-bold">Nuxt​ JS Deployment</span>
+## <span className="text-purple-700 font-bold">Nuxt​.js Deployment</span>
 
-Here is a step-by-step guide on how to deploy your Nuxt JS Project on Cloudinator: 
+Here is a step-by-step guide on how to deploy your Nuxt.js Project on Cloudinator: 
 
 <NuxtJSDeployGuide />
+
+## <span className="text-purple-700 font-bold">Video Guide</span>
+
+Here is a quick introduction video about Nuxt.js deployment in cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+## <span className="text-purple-700 font-bold">Resource</span>
+
+Here is overview of project structure:
+
+<div className="p-4">
+  <NuxtjsGitHubLink 
+    repoUrl="https://github.com/VathanakSol/basic-nuxt" 
+    repoName="basic-nuxt"
+  />
+</div>
