--- a/pages/deployment/frontend/react.mdx
+++ b/pages/deployment/frontend/react.mdx
@@ -1,7 +1,35 @@
 import ReactjsDeployGuide from '@/components/deployments/frontend/ReactjsDeployGuide';
+import ReactjsGitHubLink from '@/components/deployments/frontend/reactjs/ReactjsGitHubLink'
 
 ## <span className="text-purple-700 font-bold">React.js Deployment</span>
 
 Here is a step-by-step guide on how to deploy your React.js on Cloudinator: 
 
 <ReactjsDeployGuide />
+
+## <span className="text-purple-700 font-bold">Video Guide</span>
+
+Here is a quick introduction video about Nextjs deployment in cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+## <span className="text-purple-700 font-bold">Resource</span>
+
+Here is overview of project structure:
+
+<div className="p-4">
+  <ReactjsGitHubLink 
+    repoUrl="https://github.com/VathanakSol/basic-react.git" 
+    repoName="basic-reactjs"
+  />
+</div>
