add content in Vue

--- a/pages/deployment/frontend/vue.mdx
+++ b/pages/deployment/frontend/vue.mdx
@@ -1,5 +1,35 @@
+import VueDeployGuide from '@/components/deployments/frontend/VueDeployGuide'
+import VueGitHubLink from '@/components/deployments/frontend/vue/VueGitHubLink'
+
 ## <span className="text-purple-700 font-bold">Vue Deployment</span>
 
-<div className="w-full h-[600px] grid place-content-center">
-    <h1 className="text-purple-500 text-2xl">Coming Soon</h1>
+Here is a step-by-step guide on how to deploy your Vue on Cloudinator: 
+
+<VueDeployGuide />
+
+## <span className="text-purple-700 font-bold">Video Guide</span>
+
+Here is a quick introduction video about Vue deployment in cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+## <span className="text-purple-700 font-bold">Resource</span>
+
+Here is overview of project structure:
+
+<div className="p-4">
+  <VueGitHubLink 
+    repoUrl="https://github.com/soknydev/test-vue-js.git" 
+    repoName="basic-vue"
+  />
 </div>
