modify layout route, and hanle file coming soon

--- a/pages/deployment/frontend/nextjs.mdx
+++ b/pages/deployment/frontend/nextjs.mdx
@@ -3,7 +3,7 @@ import NextjsGitHubLink from '@/components/deployments/frontend/nextjs/NextjsGit
 
 ## <span className="text-purple-700 font-bold">Next.js Deployment</span>
 
-Here is a step-by-step guide on how to deploy your HTML static site on Cloudinator: 
+Here is a step-by-step guide on how to deploy your Nextjs site on Cloudinator: 
 
 <NextjsDeployGuide />
 
