--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -7,11 +7,11 @@ Welcome to the Cloudinator getting started guide. This document will help you se
 ## <span className="text-purple-500 font-bold">Prerequisites</span>
 
 Before you begin, ensure you have the following:
-- Operating System: Windows, macOS, or Linux
+- Operating System (Windows, macOS, or Linux)
 - Concept DevOps
-- Basic understanding of Programming
+- Understanding of Basic Programming
 
-## <span className="text-purple-500 font-bold">Installation</span>
+{/* ## <span className="text-purple-500 font-bold">Installation</span>
 
 Follow these steps to using cloudinator CLI:
 
@@ -21,7 +21,7 @@ npm install -g cloudinator
 
 # Using yarn
 yarn global add cloudinator
-```
+``` */}
 
 
 
