--- a/pages/deployment/frontend/laravel.mdx
+++ b/pages/deployment/frontend/laravel.mdx
@@ -1,5 +1,5 @@
 ## <span className="text-purple-700 font-bold">Laravel Deployment</span>
 
-<div className="w-full h-[600px] grid place-content-center">
-    <h1 className="text-purple-500 text-2xl">Coming Soon</h1>
-</div>
+import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+
+<InteractiveComingSoon />
