--- a/pages/resource/nuxtjs/introduction.mdx
+++ b/pages/resource/nuxtjs/introduction.mdx
@@ -1,4 +1,4 @@
-## <span className="text-purple-700 font-bold">Spring Deployment</span>
+## <span className="text-purple-700 font-bold">Nuxt.js For Beginner</span>
 
 import InteractiveComingSoon from '@/components/InteractiveComingSoon';
 
