add microservice content & change some ui

--- a/pages/resource/spring-microservice/introduction.mdx
+++ b/pages/resource/spring-microservice/introduction.mdx
@@ -1,5 +1,30 @@
-## <span className="text-purple-700 font-bold">Spring Microservice For Beginner</span>
+import {ContentComingSoon} from '@/components/ContentComingSoon'
 
-import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+## <span className="text-purple-700 font-bold">Introduction</span>
 
-<InteractiveComingSoon />
+### Overview of Spring Microservices
+
+**Spring Microservices** refer to the implementation of a microservice architecture using the Spring Framework, specifically the Spring Boot and Spring Cloud projects. A microservice architecture breaks down an application into smaller, independently deployable services that communicate with each other over a network.
+
+- **Spring Boot**: Provides a way to quickly create stand-alone, production-ready Spring-based applications with minimal configuration. It includes embedded servers and simplifies the process of setting up, configuring, and running microservices.
+- **Spring Cloud**: A set of tools designed to make it easier to build distributed systems, focusing on areas like configuration management, service discovery, and fault tolerance. Spring Cloud provides a rich set of services to integrate microservices, helping with:
+  + Service Discovery (Eureka, Consul)
+  + API Gateway (Spring Cloud Gateway)
+  + Distributed Configuration Management (Spring Cloud Config)
+  + Circuit Breakers (Hystrix, Resilience4j)
+  + Load Balancing (Ribbon)
+
+Together, these two frameworks allow developers to build highly scalable and flexible microservices applications with minimal effort.
+
+### Benefits of Microservice Architecture
+
+Microservice architecture offers several advantages over traditional monolithic applications, especially when dealing with large-scale, distributed systems. Below are some key benefits:
+
+**1. Scalability**
+   + Each microservice can be scaled independently, meaning that only the services with higher demand need to be scaled, rather than scaling the entire application.
+   + This enables horizontal scaling for specific services that experience high traffic, leading to more efficient resource utilization.
+
+**2. Flexibility and Technology Agnostic**
+   + Microservices allow each service to be developed using different programming languages, frameworks, or data stores based on the specific requirements of that service. For instance, one service might be written in Java, while another could use Node.js, allowing for the selection of the most appropriate technology for each task.
+
+<ContentComingSoon />
