add content in springmicro, change some ui

--- a/pages/spring-microservice/deployment.mdx
+++ b/pages/spring-microservice/deployment.mdx
@@ -1,5 +1,7 @@
+import SpringMicroDeployGuide from "@/components/deployments/springmicro/SpringMicroDeployGuide";   
+
 ## <span className="text-purple-700 font-bold">Spring Microservice Deployment</span>
 
-import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+Here is a step-by-step guide on how to deploy your Spring Microservice on Cloudinator:
 
-<InteractiveComingSoon />
+<SpringMicroDeployGuide />
