--- a/pages/deployment/frontend/react.mdx
+++ b/pages/deployment/frontend/react.mdx
@@ -15,7 +15,7 @@ Here is a quick introduction video about Nextjs deployment in cloudinator:
   <iframe
     width="580"
     height="320"
-    src="https://www.youtube.com/embed/PY-U1k98bS8?si=3krRKEkq_ChTI8XI"
+    src="https://www.youtube.com/embed/kIpW8ZkfsYs"
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowFullScreen
