add content of NestJS

--- a/pages/deployment/frontend/nuxt.mdx
+++ b/pages/deployment/frontend/nuxt.mdx
@@ -29,7 +29,7 @@ Here is overview of project structure:
 
 <div className="p-4">
   <NuxtjsGitHubLink 
-    repoUrl="https://github.com/VathanakSol/basic-nuxt" 
+    repoUrl="https://github.com/cloudinator25/basic-nuxt.git" 
     repoName="basic-nuxt"
   />
 </div>
