--- a/pages/deployment/backend/nestjs.mdx
+++ b/pages/deployment/backend/nestjs.mdx
@@ -1,5 +1,33 @@
 ## <span className="text-purple-700 font-bold">NestJS Deployment</span>
 
-import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+import NestjsDeployGuide from '@/components/deployments/backend/NestjsDeployGuide';
+import NestjsGitHubLink from '@/components/deployments/backend/nestjs/NestjsGitHubLink'
 
-<InteractiveComingSoon />
+<NestjsDeployGuide />
+
+## <span className="text-purple-700 font-bold">Video Guide</span>
+
+Here is a quick introduction video about Nestjs deployment in cloudinator:
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
+  <iframe
+    width="580"
+    height="320"
+    src="https://www.youtube.com/embed/kIpW8ZkfsYs"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ border: '1px solid #ccc', borderRadius: '8px' }}
+  ></iframe>
+</div>
+
+## <span className="text-purple-700 font-bold">Resource</span>
+
+Here is overview of project structure:
+
+<div className="p-4">
+  <NestjsGitHubLink
+    repoUrl="https://github.com/cloudinator25/basic-nestjs.git"
+    repoName="basic-nestjs"
+  />
+</div>
