add metadata in introduction page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,27 @@
+---
+title: "Introduction to Cloudinator"
+description: "Cloudinator is an innovative DevOps platform designed to streamline software development, deployment, and infrastructure management. It empowers development teams by providing tools to automate workflows, enhance collaboration, and deliver software faster with greater reliability. Cloudinator bridges the gap between development and operations teams, offering sea  mless CI/CD pipelines, robust monitoring, and infrastructure-as-code capabilities. By integrating with popular tools like Kubernetes, Docker, and Git, Cloudinator ensures a flexible and scalable solution tailored to modern software engineering needs. Key features include real-time collaboration, automated testing and deployment, security auditing, and environment orchestration, making it the go-to platform for agile and DevOps practitioners. Whether you’re deploying microservices or managing enterprise-scale applications, Cloudinator accelerates your journey to cloud-native and DevOps maturity."
+---
+
+import Head from 'next/head';
+
+<Head>
+
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
+
 import Introduction from '../components/Introduction'
 import DocHero from '../components/introduction/DocHero'
 
