add spring boot content

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,3 +1,27 @@
+---
+title: "Getting Started"
+description: "Welcome to the Cloudinator getting started guide. This document will help you set up Cloudinator and guide you through basic usage."  
+---
+
+import Head from 'next/head';
+
+<Head>
+
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
+
 import GettingStarted from '../components/GettingStarted'
 
 # <span className="text-purple-700 font-bold">Getting Started with Cloudinator</span>
