--- a/pages/contact.mdx
+++ b/pages/contact.mdx
@@ -1,3 +1,26 @@
+---
+title: "Contact Us"
+description: "Get in touch with the Cloudinator team for support, inquiries, or feedback. We are here to help you make the most of our platform and ensure your success in managing DevOps workflows effectively."  
+---
+
+import Head from 'next/head';
+
+<Head>
+
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
 import {SubmitButton} from "../components/contact/SubmitButton";
 import {FormInput} from "../components/contact/FormInput";
 
