--- a/pages/deployment/backend/nestjs.mdx
+++ b/pages/deployment/backend/nestjs.mdx
@@ -1,3 +1,26 @@
+---
+title: "Nest.js Deployment"
+description: "Discover how to deploy Nest.js applications seamlessly with Cloudinator. This guide provides step-by-step instructions to leverage Cloudinator's advanced DevOps features, enabling efficient, secure, and scalable deployments for your projects, whether on-premises or in the cloud."  
+---
+
+import Head from 'next/head';
+
+<Head>
+
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
 ## <span className="text-purple-700 font-bold">NestJS Deployment</span>
 
 import NestjsDeployGuide from '@/components/deployments/backend/NestjsDeployGuide';
