add new content of Spring Boot

--- a/pages/resource/spring-microservice/getting-started.mdx
+++ b/pages/resource/spring-microservice/getting-started.mdx
@@ -1,100 +1,5 @@
-import {ContentComingSoon} from '@/components/ContentComingSoon'
-
 ## <span className="text-purple-700 font-bold">Getting Started</span>
 
 import InteractiveComingSoon from '@/components/InteractiveComingSoon';
 
-### Setting Up a Spring Boot Project
-
-Spring Boot simplifies the setup and development of Spring-based applications by minimizing the amount of boilerplate code and configuration. Here's how you can set up a Spring Boot project:
-
-**1. Choose Your IDE and Tools**
-
-   - Install an Integrated Development Environment (IDE) like IntelliJ IDEA, Eclipse, or VS Code.
-   - Download and install the Java Development Kit (JDK). Use JDK 11 or higher for compatibility with the latest Spring Boot versions.
-
-**2. Generate the Project**
-
-   - Use the **Cloudintar Initializr** to bootstrap your Spring Boot project:
-     1. Visit [**Cloudinator Initializr**](https://cloudinator-ui.cloudinator.cloud)
-     2. Select the following
-        + Project: Maven or Gradle
-        + Language: Java
-        + Spring Boot Version: 3.1.0
-        + Group: com.example
-        + Artifact: demo
-        + Dependencies: Add the required dependencies such as
-          - Spring Web: For RESTful APIs
-          - Spring Boot DevTools: For faster development
-          - Spring Data JPA: For Databases interactions
-          - H2 Database: For an in-memory database
-          - Spring Cloud Config Client: For Microservice configuration management (Optional)
-
-     3. Click '**Generate Project**' to download a **.zip** file
-
-**3. Directory Structure**
-
-```plaintext
-src
-├── main
-│   ├── java
-│   │   └── com.example.project
-│   │       └── DemoApplication.java
-│   └── resources
-│       └── application.properties
-├── build.gradle
-└── settings.gradle
-```
-
-**4. Adding or verfiy dependencies**
-
-```groovy
-plugins {
-    id 'org.springframework.boot' version '3.1.0'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'java'
-}
-
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.h2database:h2'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-```
-
-**5. Run the Application**
-
-- Use the Gradle wrapper to run your Spring Boot application:
-
-```groovy
-./gradlew bootRun
-```
-
-- The application will start on http://localhost:8080
-
-### Tools and Prerequisites
-1. Programming Language: Java
-2. Build Tool: Gradle
-3. Dependencies:
-  - Spring Web, Spring Boot DevTools, Spring Data JPA, H2 Database
-4. Testing Tool: Postman or cURL for API testing
-
-### Creating a Basic Microservice
-
-1. Create a REST Controller
-
-<ContentComingSoon />
+<InteractiveComingSoon />
