fix metadata in introduction & microservice page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,7 +13,7 @@ import Head from 'next/head';
   <meta property="og:image" content="/images/cloudinator-logo.jpg" />
   <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Introduction to Cloudinator" />
