--- a/pages/resource/spring-microservice/spring-boot.mdx
+++ b/pages/resource/spring-microservice/spring-boot.mdx
@@ -1,3 +1,27 @@
+---
+title: "Spring Boot"
+description: "Spring Boot is an open-source framework for building web applications and microservices in Java. It is designed to simplify the process of building web applications and microservices by providing a set of default configurations and tools. Spring Boot allows developers to quickly create stand-alone, production-ready applications with minimal configuration. It is a popular choice for developing web applications and microservices, and is widely used in industry and academia."
+---
+
+import Head from 'next/head';
+
+<Head>
+
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/programming/spring.png" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/resource/spring-microservice/spring-boot" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/programming/spring.png" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
+
 import {TomCat} from "@/components/Icon";
 
 ## <span className="text-purple-700 font-bold">Spring Boot</span>
@@ -145,10 +169,18 @@ Spring Boot's dependency management is a powerful feature that simplifies librar
 - Simplifies build file Maintenance
 - Provide consistent dependency management across projects
 
-##### <span className="text-gray-500 font-semibold">Dependency Management</span>
-**7. DevTools for Faster Development**
+##### <span className="text-gray-500 font-semibold">DevTools for Faster Development</span>
 
 Spring Boot's DevTools module enhances the developer experience by enabling features like automatic reloads, live reload, and caching optimizations during development.
+
+- **Automatic restarts** 
+- **Live Reload**
+- **Property Defaults**
+- **Remote Development Support**
+- **Development-specific Configuration**
+- **Global Settings**
+- **File Watch Configuration**
+- **performance Considerations**
 
 **8. Integration with Spring Ecosystem**
 
